# portal

./: .gitignore  AGENTS.md  Cargo.toml  PRD.md  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
docs/: TUI_COMPARISON.md  perf-optimization.md
docs/images/: atomic-swap.mmd  cli-diff.tape  cli-overview.tape  seed-demo-home.sh  tui-diff.tape  tui-load-flags.tape  tui-main.tape  tui-quick-switch.tape  tui-toggle.tape
docs/superpowers/plans/: 2026-04-23-portal-cli.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/core/: backup.rs  bind.rs  checksum.rs  clone.rs  diff.rs  doctor.rs  git_history.rs  loader.rs  mod.rs  plugins.rs  profile.rs  progress.rs  remove.rs  safety.rs  skeleton.rs  snapshot.rs  transport.rs
src/storage/: cas.rs  manifest.rs  meta.rs  mod.rs  paths.rs  plugins_manifest.rs  state.rs
src/tui/: app.rs  event.rs  mod.rs  palette.rs  quick_switch.rs  ui.rs
tests/: backup_test.rs  bind_test.rs  checksum_test.rs  cli_test.rs  clone_test.rs  diff_test.rs  doctor_test.rs  git_history_test.rs  load_test.rs  manifest_test.rs  paths_test.rs  plugins_diff_test.rs  progress_channel_test.rs  quick_switch_test.rs  remove_test.rs  safety_test.rs  save_test.rs  skeleton_test.rs  toggle_test.rs  transport_test.rs  types_test.rs
