[package]
name = "portal"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
description = "Configuration transport layer for Claude Code"
license = "MIT"

[features]
default = ["tui-ratatui"]
tui-ratatui = ["dep:ratatui", "dep:crossterm", "dep:fuzzy-matcher"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
tempfile = "3"
walkdir = "2"
tar = "0.4"
zstd = "0.13"
chrono = { version = "0.4", features = ["serde"] }
similar = "2"
glob = "0.3"
rayon = "1"
reflink-copy = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
dirs = "6"
ratatui = { version = "0.30", optional = true }
crossterm = { version = "0.29", optional = true }
fuzzy-matcher = { version = "0.3", optional = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "warn"
